<resources>
    <string name="app_name">Tp_3_4_navigation</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="contacts">Contacts</string>
    <string name="dashboard">Dashboard</string>
    <string name="_3d">3D</string>
    <string name="add_chart">Add chart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second fragment</string>
    <string name="third_fragment">Third fragment</string>
</resources>