<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24" />

        <item
            android:id="@+id/menu_3d"
            android:title="@string/_3d"
            android:icon="@drawable/ic_baseline_3d_rotation_24" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_chart"
            android:title="@string/add_chart"
            android:icon="@drawable/ic_baseline_add_chart_24"/>
    </group>


</menu>