<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favorite"
        android:title="@string/add_to_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white"/>


    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never"
        app:iconTint="@color/white"/>

</menu>